--- a/frontend/edit-company.html
+++ b/frontend/edit-company.html
@@ -5,7 +5,6 @@
     <title>Company</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </head>
 
 <body style="height: 100%;">
@@ -49,18 +48,14 @@
                     <label for="companyName" class="form-label"><h5>Company Name</h5></label>
                     <input class="form-control border border-primary" id="companyName">
                 </div>
-                <div class="mb-3">
+                <div class="mb-5">
                     <label for="town" class="form-label"><h5>Town</h5></label>
                     <input class="form-control border border-primary" id="town">
                 </div>
-                <div class="mb-3 form-check" id="checkDiv">
-                    <input type="checkbox" class="form-check-input border border-primary" id="checkSave">
-                    <label class="form-check-label" for="checkSave"><h6>Stay on this page after save</h6></label>
-                </div>
 
-                <table class="table table-striped">
+                <table class="table table-striped mb-3">
                     <tbody id="data-table">
-                        <tr><h3>Employees</h3></tr>
+                        <tr><h3>People</h3></tr>
                         <hr>
                         <tr>
                             <th></th>
@@ -70,6 +65,19 @@
                         </tr>
                     </tbody>
                 </table>
+
+                <div class="dropdown">
+                    <button class="btn btn-outline-primary dropdown-toggle mb-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Add new Person
+                    </button>
+                    <ul class="dropdown-menu" id="peopleDropdown">
+                    </ul>
+                  </div>
+
+                <div class="mb-3 form-check" id="checkDiv">
+                    <input type="checkbox" class="form-check-input border border-primary" id="checkSave">
+                    <label class="form-check-label" for="checkSave"><h6>Stay on this page after save</h6></label>
+                </div>
 
                 <button type="button" class="btn btn-primary" style="width: 200px;" id="submitButton">Save</button>
             </div>
