add ability to assign companies to person

--- a/frontend/edit-company.html
+++ b/frontend/edit-company.html
@@ -66,9 +66,9 @@
                     </tbody>
                 </table>
 
-                <div class="dropdown">
+                <div class="dropdown" id="addDropdown">
                     <button class="btn btn-outline-primary dropdown-toggle mb-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Add new Person
+                      Add Person
                     </button>
                     <ul class="dropdown-menu" id="peopleDropdown">
                     </ul>
