--- a/frontend/people.html
+++ b/frontend/people.html
@@ -48,7 +48,25 @@
                         <hr>
                     </tr>
                     <tr>
-                        <th><a class="btn btn-primary active" href="/new-person.html">New Person</a></th>
+                        <th>
+                            <div class="row">
+                                <div class="dropdown col text-center mb-1">
+                                    <button class="btn btn-secondary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Order by:
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Id</a></li>
+                                        <li><a class="dropdown-item" href="#">First Name</a></li>
+                                        <li><a class="dropdown-item" href="#">Surname</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col text-center">
+                                    <a class="btn btn-primary active col w-100" href="/new-person.html">New Person</a>
+                                </div>
+                            </div>
+                        </th>
                         <!-- <th><h4>Id</h4></th> -->
                         <th><h4>First Name</h4></th>
                         <th><h4>Surname</h4></th>
