--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body style="height: 100%;">
-<table style="height: 100%;">
+<body>
+<!-- <table style="height: 100%;">
     <tr>
         <th>
             <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100%;">
@@ -17,7 +17,7 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active" aria-current="page">
+                        <a href="index.html" class="nav-link text" aria-current="page">
                             <img src="/images/home-icon.png" width="30px">
                             Home
                         </a>
@@ -39,12 +39,46 @@
             </div>
         </th>
 
-        <th>
+        <th> 
             <p>Welcome</p>
         </th>
 
     </tr>
-</table>
+</table> -->
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <h2 class="d-none d-sm-inline">Agency</h2>
+                </div>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                    <li class="w-100">
+                        <a href="index.html" class="nav-link active" aria-current="page">
+                            <img src="/images/home-icon.png" width="30px">
+                            Home
+                        </a>
+                    </li>
+                    <li class="w-100">
+                        <a href="companies.html" class="nav-link text-white">
+                            <img src="/images/companies-icon.png" width="30px">
+                            Companies
+                        </a>
+                    </li>
+                    <li class="w-100">
+                        <a href="people.html" class="nav-link text-white">
+                            <img src="/images/people-icon.png" width="30px">
+                            People
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col py-3">
+            Welcome
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
