--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,78 +7,56 @@
 </head>
 
 <body>
-<!-- <table style="height: 100%;">
-    <tr>
-        <th>
-            <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px; height: 100%;">
-                <span class="fs-4 d-flex align-items-center mb-3 text-white text-decoration-none">
-                    Agency
-                </span>
-                <hr>
-                <ul class="nav nav-pills flex-column mb-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link text" aria-current="page">
-                            <img src="/images/home-icon.png" width="30px">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="companies.html" class="nav-link text-white">
-                            <img src="/images/companies-icon.png" width="30px">
-                            Companies
-                        </a>
-                    </li>
-                    <li>
-                        <a href="people.html" class="nav-link text-white">
-                            <img src="/images/people-icon.png" width="30px">
-                            People
-                        </a>
-                    </li>
-                </ul>
-                <hr>
-            </div>
-        </th>
-
-        <th> 
-            <p>Welcome</p>
-        </th>
-
-    </tr>
-</table> -->
-<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <h2 class="d-none d-sm-inline">Agency</h2>
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                    <div class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <h2 class="d-none d-sm-inline">Agency</h2>
+                    </div>
+                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                        <li class="w-100">
+                            <a href="index.html" class="nav-link active" aria-current="page">
+                                <img src="/images/home-icon.png" width="30px">
+                                Home
+                            </a>
+                        </li>
+                        <li class="w-100">
+                            <a href="companies.html" class="nav-link text-white">
+                                <img src="/images/companies-icon.png" width="30px">
+                                Companies
+                            </a>
+                        </li>
+                        <li class="w-100">
+                            <a href="people.html" class="nav-link text-white">
+                                <img src="/images/people-icon.png" width="30px">
+                                People
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                    <li class="w-100">
-                        <a href="index.html" class="nav-link active" aria-current="page">
-                            <img src="/images/home-icon.png" width="30px">
-                            Home
-                        </a>
-                    </li>
-                    <li class="w-100">
-                        <a href="companies.html" class="nav-link text-white">
-                            <img src="/images/companies-icon.png" width="30px">
-                            Companies
-                        </a>
-                    </li>
-                    <li class="w-100">
-                        <a href="people.html" class="nav-link text-white">
-                            <img src="/images/people-icon.png" width="30px">
-                            People
-                        </a>
-                    </li>
-                </ul>
             </div>
-        </div>
-        <div class="col py-3">
-            Welcome
+            <div class="col py-3">
+                <div class="p-5 text-center bg-body-tertiary rounded-3">
+                    <img class="bi mt-4 mb-3" src="images/database-animation.gif" width="50%" style="border-radius: 80%;">
+                    <p class="text-body-emphasis fs-1">Welcome</p>
+                    <hr>
+                    <p class="col-lg-8 mx-auto fs-4 text-muted">
+                        Agency is your go-to platform for efficiently storing and managing company and employee data. Our user-friendly database makes it easy to organize, update, remove and access information.
+                    </p>
+                    <div class="d-inline-flex gap-2 mb-5">
+                        <a class="btn btn-secondary btn-lg" href="new-company.html">
+                            Create a new company <img src="images/arrow.png" width="20px">
+                        </a>
+                        <a class="btn btn-primary btn-lg" href="new-person.html">
+                            Create a new person <img src="images/arrow.png" width="20px">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
