Add sorting to companies and people pages, fixes issue #2

--- a/frontend/companies.html
+++ b/frontend/companies.html
@@ -47,20 +47,19 @@
                         <tr>
                             <th>
                                 <div class="row">
-                                    <div class="dropdown col mb-1">
-                                        <button style="width: 190px;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Order by:
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Id</a></li>
-                                            <li><a class="dropdown-item" href="#">Company Name</a></li>
-                                            <li><a class="dropdown-item" href="#">Town</a></li>
-                                        </ul>
+                                    <div class="col mb-1">
+                                        <a style="width: 250px;" class="btn btn-primary active col" href="/new-company.html">New Company</a>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col">
-                                        <a style="width: 190px;" class="btn btn-primary active col" href="/new-company.html">New Company</a>
+                                    <div class="dropdown col">
+                                        <button id="orderDropdown" style="width: 250px;" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Ordering by:
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                            <li style="width: 250px;"><a id="orderNameButton" class="dropdown-item" onclick="getCompaniesByName()">Order by Company Name</a></li>
+                                            <li style="width: 250px;"><a id="orderTownButton" class="dropdown-item" onclick="getCompaniesByTown()">Order by Town</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </th>
