--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,11 +45,11 @@
                         Agency is your go-to platform for efficiently storing and managing company and employee data. Our user-friendly database makes it easy to organize, update, remove and access information.
                     </p>
                     <div class="d-inline-flex gap-2 mb-5">
-                        <a class="btn btn-secondary btn-lg" href="new-company.html">
-                            Create a new company <img src="images/arrow.png" width="20px">
+                        <a class="btn btn-outline-primary btn-lg" href="new-company.html">
+                            Create a new company
                         </a>
-                        <a class="btn btn-primary btn-lg" href="new-person.html">
-                            Create a new person <img src="images/arrow.png" width="20px">
+                        <a class="btn btn-outline-primary btn-lg" href="new-person.html">
+                            Create a new person
                         </a>
                     </div>
                 </div>
