--- a/frontend/edit-company.html
+++ b/frontend/edit-company.html
@@ -45,37 +45,47 @@
                         <label for="companyName" class="form-label"><h5>Company Name</h5></label>
                         <input class="form-control border border-primary" id="companyName">
                     </div>
-                    <div class="mb-5">
+                    <div class="mb-3">
                         <label for="town" class="form-label"><h5>Town</h5></label>
                         <input class="form-control border border-primary" id="town">
                     </div>
 
-                    <table class="table table-striped mb-3">
-                        <tbody id="data-table">
-                            <tr><h3>People</h3></tr>
-                            <hr>
-                            <tr>
-                                <th></th>
-                                <th><h6>First Name</h6></th>
-                                <th><h6>Surname</h6></th>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <div class="dropdown" id="addDropdown">
-                        <button class="btn btn-outline-primary dropdown-toggle mb-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Add Person
-                        </button>
-                        <ul class="dropdown-menu" id="peopleDropdown">
-                        </ul>
-                    </div>
-
-                    <div class="mb-3 form-check" id="checkDiv">
+                    <div class="mb-2 form-check" id="checkDiv">
                         <input type="checkbox" class="form-check-input border border-primary" id="checkSave">
                         <label class="form-check-label" for="checkSave"><h6>Stay on this page after save</h6></label>
                     </div>
+                    <button type="button" class="btn btn-primary mb-5" style="width: 200px;" id="submitButton">Save</button>
 
-                    <button type="button" class="btn btn-primary" style="width: 200px;" id="submitButton">Save</button>
+                    <table class="table table-striped">
+                        <tbody id="data-table">
+                            <tr><h3>People</h3></tr>
+                            <hr>
+
+                            <div class="dropdown" id="addDropdown" style="display: inline-block;">
+                                <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Add Person
+                                </button>
+                                <ul class="dropdown-menu" id="peopleDropdown">
+                                </ul>
+                            </div>
+
+                            <div class="dropdown" style="display: inline-block;">
+                                <button id="orderDropdown" class="btn btn-secondary dropdown-toggle mx-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Ordering by: Surname
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a id="orderFirstNameButton" class="dropdown-item" onclick="getPeopleByFirstName()">Order by First Name</a></li>
+                                    <li><a id="orderSurnameButton" class="dropdown-item" onclick="getPeopleBySurname()">Order by Surname</a></li>
+                                </ul>
+                            </div>
+
+                            <tr>
+                                <th></th>
+                                <th><h5>First Name</h5></th>
+                                <th><h5>Surname</h5></th>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
