include new columns on companies pages

--- a/frontend/companies.html
+++ b/frontend/companies.html
@@ -65,6 +65,10 @@
                             </th>
                             <th><h4>Company Name</h4></th>
                             <th><h4>Town</h4></th>
+                            <th><h4>Address</h4></th>
+                            <th><h4>Telephone Number</h4></th>
+                            <th><h4>Website</h4></th>
+                            <th><h4>Employee Count</h4></th>
                         </tr>
                     </tbody>
                 </table>
