add new columns to people.html table and split api main.py into 3 smaller files

--- a/frontend/people.html
+++ b/frontend/people.html
@@ -65,6 +65,10 @@
                             </th>
                             <th><h4>First Name</h4></th>
                             <th><h4>Surname</h4></th>
+                            <th><h4>Email Address</h4></th>
+                            <th><h4>Telephone Number</h4></th>
+                            <th><h4>Date of Birth</h4></th>
+                            <th><h4>Company Count</h4></th>
                         </tr>
                     </tbody>
                 </table>
