update new-company page and endpoint to support support new columns

--- a/frontend/new-person.html
+++ b/frontend/new-person.html
@@ -41,12 +41,12 @@
                 <h1>New Person</h1>
                 <hr>
                 <form id="newPersonForm">
-                    <div class="mb-3" style="margin-top: 30px;">
-                        <label for="firstName" class="form-label"><h5>First Name</h5></label>
+                    <div class="mb-2" style="margin-top: 30px;">
+                        <label for="firstName" class="form-label mb-0"><h5>First Name</h5></label>
                         <input class="form-control border border-primary" id="firstName">
                     </div>
-                    <div class="mb-3">
-                        <label for="surname" class="form-label"><h5>Surname</h5></label>
+                    <div class="mb-2">
+                        <label for="surname" class="form-label mb-0"><h5>Surname</h5></label>
                         <input class="form-control border border-primary" id="surname">
                     </div>
                     <div class="mb-3 form-check">
