--- a/frontend/new-company.html
+++ b/frontend/new-company.html
@@ -42,15 +42,29 @@
                 <h1>New Company</h1>
                 <hr>
                 <form id="newCompanyForm">
-                    <div class="mb-3" style="margin-top: 30px;">
-                        <label for="companyName" class="form-label"><h5>Company Name</h5></label>
+
+                    <div class="mb-2" style="margin-top: 30px;">
+                        <label for="companyName" class="form-label mb-0"><h5>Company Name</h5></label>
                         <input class="form-control border border-primary" id="companyName">
                     </div>
-                    <div class="mb-3">
-                        <label for="town" class="form-label"><h5>Town</h5></label>
+                    <div class="mb-2">
+                        <label for="town" class="form-label mb-0"><h5>Town</h5></label>
                         <input class="form-control border border-primary" id="town">
                     </div>
-                    <div class="mb-3 form-check">
+                    <div class="mb-2">
+                        <label for="address" class="form-label mb-0"><h5>Address</h5></label>
+                        <input class="form-control border border-primary" id="address">
+                    </div>
+                    <div class="mb-2">
+                        <label for="telephoneNumber" class="form-label mb-0"><h5>Telephone Number</h5></label>
+                        <input class="form-control border border-primary" id="telephoneNumber" type="tel">
+                    </div>
+                    <div class="mb-2">
+                        <label for="website" class="form-label mb-0"><h5>Website</h5></label>
+                        <input class="form-control border border-primary mb-5" id="website" type="url">
+                    </div>
+
+                    <div class="mb-2 form-check">
                         <input type="checkbox" class="form-check-input border border-primary" id="checkSave">
                         <label class="form-check-label" for="checkSave"><h6>Stay on this page after save</h6></label>
                     </div>
