update new-person page and endpoint to support new columns

--- a/frontend/new-company.html
+++ b/frontend/new-company.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col py-3">
+            <div class="col py-3" style="margin-left: 12vw; margin-right: 12vw;">
                 <h1>New Company</h1>
                 <hr>
                 <form id="newCompanyForm">
@@ -59,12 +59,12 @@
                         <label for="telephoneNumber" class="form-label mb-0"><h5>Telephone Number</h5></label>
                         <input class="form-control border border-primary" id="telephoneNumber" type="tel">
                     </div>
-                    <div class="mb-2">
+                    <div class="mb-4">
                         <label for="website" class="form-label mb-0"><h5>Website</h5></label>
-                        <input class="form-control border border-primary mb-5" id="website" type="url">
+                        <input class="form-control border border-primary" id="website" type="url">
                     </div>
 
-                    <div class="mb-2 form-check">
+                    <div class="mb-1 form-check">
                         <input type="checkbox" class="form-check-input border border-primary" id="checkSave">
                         <label class="form-check-label" for="checkSave"><h6>Stay on this page after save</h6></label>
                     </div>
