add validation to new-person page

--- a/frontend/new-person.html
+++ b/frontend/new-person.html
@@ -90,9 +90,7 @@
             <strong class="me-auto text-white">Incorrect data</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
-        <div class="toast-body">
-            Fields cannot be left empty and the characters ' and " cannot be used.
-        </div>
+        <div class="toast-body" id="incorrectToastMessage"></div>
         </div>
     </div>
 
